--- a/app-prod.properties
+++ b/app-prod.properties
@@ -1,3 +1,3 @@
-app.service.workmode=file
-api.base-uri= https://mag-contacts-api.herokuapp.com
+app.service.workmode=api
+api.base-uri=https://mag-contacts-api.herokuapp.com
 file.path=contacts.txt
